remove DashSearch, add Table Search component directly in ScrollableTableWithMenu, add accessibility fix for truncated project item titles

--- a/components/ScrollableTableWithMenu/TableSearch/TableSearch.scss
+++ b/components/ScrollableTableWithMenu/TableSearch/TableSearch.scss
@@ -4,7 +4,7 @@
   padding-bottom: 0;
 }
 
-.dashSearch {
+.tableSearch {
   &__searchTerm {
     width: 100%;    
 
