--- a/components/admin/Dashboard/Dashboard.scss
+++ b/components/admin/Dashboard/Dashboard.scss
@@ -21,10 +21,11 @@
   }
 
   .ui.text.menu {
-    margin: 6px -0.5em 8px;
+    min-height: auto;    
     border-bottom: 1px solid #ccc;
 
     .item {
+      padding-bottom: 10px;
       margin-right: 1em;
       font-size: 16px;
 
@@ -36,8 +37,9 @@
         &:after {
           content: '';
           position: absolute;
-          top: 32px;
+          bottom: -3px;
           left: 0;
+          z-index: 1;;
           width: 100%;
           height: 4px;
           background-color: $light-blue;
